# floatchat-rag

./: README.md  pyproject.toml  requirements.txt  test_prompts
app/: app.py
data/: argo.csv  buoys.csv  drifting.json  hf_radar.csv  parameters.csv
pipeline/: data_ingest.py  pipeline.py
prompts/: __init__.py  query_prompts.py  system_prompts.py  viz_prompts.py
rag/: rag_handler.py
